--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -5,7 +5,7 @@
              type="text"
              placeholder="Post title"
              name="title"
-             ngModel
+             [ngModel]="post?.title"
              required
              #title="ngModel">
       <mat-error *ngIf="title.invalid">Post title is required!</mat-error>
@@ -14,7 +14,7 @@
       <textarea matInput
                 placeholder="Post Content"
                 name="content"
-                ngModel
+                [ngModel]="post?.content"
                 required
                 #content="ngModel">
       </textarea>
