--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,30 +1,34 @@
 <mat-card>
-  <form (submit)="onAddedPost(postForm)" #postForm="ngForm" *ngIf="!spinner">
+  <form [formGroup]="form" (submit)="onAddedPost()" *ngIf="!spinner">
     <mat-form-field>
       <input matInput
              type="text"
              placeholder="Post title"
-             name="title"
-             [ngModel]="post?.title"
-             required
-             #title="ngModel">
-      <mat-error *ngIf="title.invalid">Post title is required!</mat-error>
+             formControlName="title">
+      <mat-error *ngIf="form.get('title').invalid">Post title is required!</mat-error>
     </mat-form-field>
     <mat-form-field>
       <textarea matInput
                 placeholder="Post Content"
-                name="content"
-                [ngModel]="post?.content"
-                required
-                #content="ngModel">
+                formControlName="content">
       </textarea>
-      <mat-error *ngIf="content.invalid">Post content is required!</mat-error>
+      <mat-error *ngIf="form.get('content').invalid">Post content is required!</mat-error>
     </mat-form-field>
-    <button mat-raised-button
-            type="submit"
-            color="primary">
-      Save Post
-    </button>
+    <div>
+      <button type="button" mat-stroked-button (click)="picUpload.click()">Upload image</button>
+      <input type="file" #picUpload (change)="onChoosePic($event)">
+
+      <div class="picPreview" *ngIf="picPreview && form.get('image').valid">
+        <img [src]="picPreview">
+      </div>
+    </div>
+    <mat-card-actions>
+      <button mat-raised-button
+              type="submit"
+              color="primary">
+        Save Post
+      </button>
+    </mat-card-actions>
   </form>
   <mat-spinner *ngIf="spinner"></mat-spinner>
 </mat-card>
